maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:86: error: value elseif is not a member of Unit
possible cause: maybe a semicolon is missing before `value elseif'?
  }elseif(ici - getIndication(x,y+1)>0){
   ^ShortestPathMaze:86: error: Boolean does not take parameters
  }elseif(ici - getIndication(x,y+1)>0){
                                       ^